# taskflow

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  doc.md  docker-compose.yml  taskcore
.github/workflows/: ci.yaml  cmake-multi-platform.yaml  docker-publish.yml
Python/: CMakeLists.txt
Python/src/: python_binding.cpp
Python/test/: smoke.py
benchmarks/: CMakeLists.txt  orchestrator_benchmark.cpp
capi/: CMakeLists.txt  taskflow_c.cpp  taskflow_c.h
cmake/: TaskFlowExamples.cmake  cmake_uninstall.cmake.in  taskflow.pc.in
docs/: ARCHITECTURE.md  README.md
examples/: 01_minimal_task.cpp  02_sequential_dag.cpp  03_parallel_tasks.cpp  04_conditional_edges.cpp  05_task_context.cpp  06_task_results.cpp  07_retry_policy.cpp  08_cancellation.cpp  09_observer_logger.cpp  10_metrics_collection.cpp  11_sqlite_persistence.cpp  12_blueprint_serialization.cpp  13_async_execution.cpp  14_custom_executor.cpp  15_event_hooks.cpp  16_cancellation_example.cpp  17_minimal_orchestrator.cpp  18_microservice_orchestration.cpp  19_data_pipeline.cpp  20_approval_workflow.cpp  21_iot_event_processing.cpp  22_compensation_saga.cpp  CMakeLists.txt  README.md  basic_task_submission.cpp  cancellation_example.cpp  example_util.hpp  minimal_orchestrator.cpp  multiple_tasks.cpp  persistent_task.cpp  task_traits_and_types.cpp  task_types.hpp  task_with_failure.cpp  task_with_progress.cpp  task_with_result.cpp
include/taskflow/: any_task.hpp  state_storage.hpp  task_ctx.hpp  task_manager.hpp  task_traits.hpp  taskflow.hpp
include/taskflow/core/: audit_log.hpp  cancellation_token.hpp  cpo.hpp  error_code.hpp  result.hpp  result_storage.hpp  state_storage.hpp  task.hpp  task_concepts.hpp  task_ctx.hpp  traits.hpp  types.hpp
include/taskflow/engine/: default_thread_pool.hpp  execution.hpp  executor.hpp  orchestrator.hpp  parallel_executor.hpp  registry.hpp  result_collector.hpp  scheduler.hpp  sync_executor.hpp
include/taskflow/integration/: event_hooks.hpp
include/taskflow/obs/: hooks_observer.hpp  logger.hpp  metrics.hpp  observer.hpp
include/taskflow/observer/: hooks_observer.hpp  logger.hpp  metrics.hpp  observer.hpp
include/taskflow/storage/: memory_result_storage.hpp  memory_state_storage.hpp  memory_storage.hpp  sqlite_state_storage.hpp  state_storage_factory.hpp  storage.hpp
include/taskflow/workflow/: blueprint.hpp  edge.hpp  node.hpp  serializer.hpp
node/: CMakeLists.txt  binding.gyp  index.d.ts  index.js  package-lock.json  package.json
node/src/: node_binding.cpp
node/test/: smoke.js
src/: CMakeLists.txt
src/core/: audit_log.cpp  task_ctx.cpp
src/engine/: default_thread_pool.cpp  execution.cpp  execution_snapshot.cpp  executor.cpp  orchestrator.cpp  registry.cpp  scheduler.cpp
src/obs/: logger.cpp  metrics.cpp
src/observer/: logger.cpp  metrics.cpp
src/storage/: memory_result_storage.cpp  memory_state_storage.cpp  memory_storage.cpp  sqlite_state_storage.cpp  state_storage_factory.cpp
src/workflow/: blueprint.cpp  serializer.cpp
tests/: CMakeLists.txt  cancellation_test.cpp  compensation_test.cpp  orchestrator_test.cpp  retry_test.cpp  state_storage_factory_test.cpp
tests/capi/: taskflow_capi_test.cpp
tests/core/: blueprint_test.cpp  error_code_test.cpp  executor_test.cpp  logger_test.cpp  memory_result_storage_test.cpp  memory_state_storage_test.cpp  metrics_test.cpp  observer_test.cpp  scheduler_test.cpp  serialization_test.cpp  sqlite_state_storage_test.cpp  task_ctx_test.cpp  task_registry_test.cpp  workflow_execution_test.cpp
tests/integration/: orchestrator_integration_test.cpp
